--- a/assets/main.scss
+++ b/assets/main.scss
@@ -87,4 +87,5 @@ a {
   "_sass/_home.scss",
   "_sass/_footer.scss",
   "_sass/_post.scss",
+  "_sass/_blog.scss",
   "_sass/_syntax-highlighting.scss"
