--- a/assets/_sass/_blog.scss
+++ b/assets/_sass/_blog.scss
@@ -13,12 +13,22 @@
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.10);
   }
 }
-.blog-container {
+.page-container {
   margin: 2rem;
   display: grid;
   grid-gap: 1rem;
   @include desktop {
     margin: 3rem;
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.projects-container {
+  margin: 2rem;
+  display: grid;
+  grid-gap: 1rem;
+  @include desktop {
+    margin: 3rem;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
