--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,8 +40,8 @@
             <div class="container-middle center-text">
                 <h1><a name="about">About Me</a></h1>
                 <p>
-                    I've always been interested in coding and creating my own programs. After completing the online course Intro to CS and programming with python from MIT at edx.org
-                    I've decided that it was time to dedicate my free time to learn more about coding.  MY goal is to become a good developer and work in challenging new things.
+                    I'm a self-taught developer who loves open source. When not flying for work, I spend a great amount of time either coding or learning new things.
+                    Some of my other passions include gaming, reading, photography and travelling - I've been to 15 different countries spread over 3 continents.
                 </p>
             </div>
             <div class="three-columns">
