--- a/assets/_sass/_syntax-highlighting.scss
+++ b/assets/_sass/_syntax-highlighting.scss
@@ -1,24 +1,34 @@
-$padding-unit: 1.5rem;
 /**
 * Code Formatting
 */
-pre,
-code {
-  color: #3d5ce5;
-  border: 1px solid grey;
-  border-radius: 3px;
-  background-color: #edfbff;
-}
 
 code {
-  padding: 1px 5px;
+  padding: 1px 6px;
+  color: #164b78;
+  border: 1px solid #c2c6cc;
+  border-radius: 3px;
+  background-color: #e7e9ee;
 }
 
 pre {
-  padding: 8px 12px;
+  border: 1px solid #57606B;
+  border-radius: 3px;
+  background-color: #1E2A39;
+  padding: 2rem;
   overflow-x: auto;
+  position: relative;
+  margin-right: -2rem;
+  margin-left: -3rem;
+  font-size: large;
+  @include desktop {
+    padding-left: 16rem;
+    margin-left: -51vw;
+    left: 50%;
+  }
 
   > code {
+    color: #ebeef2;
+    background-color: #1E2A39;
     border: 0;
     padding-right: 0;
     padding-left: 0;
@@ -29,75 +39,72 @@ pre {
  * Syntax highlighting styles
  */
 .highlight {
-  background: #fff;
   margin-bottom: $spacing-unit / 1.5;
   margin-top: $spacing-unit / 1.5;
 
-  .highlighter-rouge & {
-    background: #edfbff;
-  }
 
-
-  .c     { color: #b0ddf2; font-style: italic } // Comment
+  .c     { color: #7898a7; font-style: italic } // Comment
   .err   { color: #f24161; background-color: #f24161 } // Error
-  .k     { color: #7941f2; font-weight: bold } // Keyword
-  .o     { color: #3d5ce5; font-weight: bold } // Operator
+  .k     { color: #00beff; font-weight: bold } // Keyword
+  .o     { color: #ff2b99; font-weight: bold } // Operator
   .cm    { color: #b0ddf2; font-style: italic } // Comment.Multiline
   .cp    { color: #abd6ea; font-weight: bold } // Comment.Preproc
   .c1    { color: #b0ddf2; font-style: italic } // Comment.Single
   .cs    { color: #abd6ea; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+  .gd    { color: #f24161; background-color: #fdd } // Generic.Deleted
+  .gd .x { color: #f24161; background-color: #faa } // Generic.Deleted.Specific
   .ge    { font-style: italic } // Generic.Emph
   .gr    { color: #f24161 } // Generic.Error
   .gh    { color: #999 } // Generic.Heading
-  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
+  .gi    { color: #3f5878; background-color: #dfd } // Generic.Inserted
+  .gi .x { color: #3f5878; background-color: #afa } // Generic.Inserted.Specific
+  .go    { color: #b6d1f9} // Generic.Output
+  .gp    { color: #b6d1f9 } // Generic.Prompt
   .gs    { font-weight: bold } // Generic.Strong
   .gu    { color: #aaa } // Generic.Subheading
   .gt    { color: #f24161 } // Generic.Traceback
   .kn    { color: #4161f2 } // Import statements
   .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { font-weight: bold } // Keyword.Declaration
+  .kd    { color: #cc5fff; font-weight: bold } // Keyword.Declaration
   .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #458; font-weight: bold } // Keyword.Type
+  .kr    { color: #cc5fff; font-weight: bold } // Keyword.Reserved
+  .kt    { color: #98b2ff; font-weight: bold } // Keyword.Type
   .m     { color: #41f2d1 } // Literal.Number
-  .s     { color: #45C3FF } // Literal.String
-  .n     { color: #00405f } // Name
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #0086B3 } // Name.Builtin
+  .s     { color: #ebeef2 } // Literal.String
+  .n     { color: #fac85b } // Name
+  .na    { color: #00d55f } // Name.Attribute
+  .nb    { color: #00d55f } // Name.Builtin
   .nc    { color: #f27941; font-weight: bold } // Name.Class
-  .nd    { color: #4161f2 }; //Name.Decorator
-  .no    { color: #008080 } // Name.Constant
-  .ni    { color: #800080 } // Name.Entity
+  .nd    { color: #4161f2 } //Name.Decorator
+  .no    { color: #04cccc } // Name.Constant
+  .nx    { color: #fac85b }
+  .ni    { color: #ff91ff } // Name.Entity
   .ne    { color: #f24161; font-weight: bold } // Name.Exception
-  .nf    { color: #f241ba; font-weight: bold } // Name.Function
+  .nf    { color: #41f2d1; font-weight: bold } // Name.Function
   .nn    { color: #f27941 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
+  .nt    { color: #00beff } // Name.Tag
+  .nv    { color: #00d4d4 } // Name.Variable
   .ow    { color: #d141f2; font-weight: bold } // Operator.Word
   .w     { color: #bbb } // Text.Whitespace
-  .mf    { color: #099 } // Literal.Number.Float
-  .mh    { color: #099 } // Literal.Number.Hex
-  .mi    { color: #41f2d1 } // Literal.Number.Integer
-  .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #45C3FF } // Literal.String.Backtick
-  .sc    { color: #45C3FF } // Literal.String.Char
-  .sd    { color: #45C3FF } // Literal.String.Doc
-  .s2    { color: #45C3FF } // Literal.String.Double
-  .se    { color: #45C3FF } // Literal.String.Escape
-  .sh    { color: #45C3FF } // Literal.String.Heredoc
+  .mf    { color: #00caca} // Literal.Number.Float
+  .mh    { color: #00caca } // Literal.Number.Hex
+  .mi    { color: #cce9ff } // Literal.Number.Integer
+  .mo    { color: #00caca } // Literal.Number.Oct
+  .sb    { color: #ebeef2 } // Literal.String.Backtick
+  .sc    { color: #ebeef2 } // Literal.String.Char
+  .sd    { color: #ebeef2 } // Literal.String.Doc
+  .s2    { color: #ebeef2 } // Literal.String.Double
+  .se    { color: #ebeef2 } // Literal.String.Escape
+  .sh    { color: #ebeef2 } // Literal.String.Heredoc
   .si    { color: #41f2d1 } // Literal.String.Interpol
-  .sx    { color: #45C3FF } // Literal.String.Other
+  .sx    { color: #ebeef2 } // Literal.String.Other
   .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #45C3FF } // Literal.String.Single
+  .s1    { color: #ebeef2 } // Literal.String.Single
   .ss    { color: #990073 } // Literal.String.Symbol
-  .bp    { color: #0086B3 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
-  .il    { color: #099 } // Literal.Number.Integer.Long
+  .bp    { color: #cc5fff } // Name.Builtin.Pseudo
+  .vc    { color: #00d4d4 } // Name.Variable.Class
+  .vg    { color: #00d4d4 } // Name.Variable.Global
+  .vi    { color: #00d4d4 } // Name.Variable.Instance
+  .il    { color: #00caca } // Literal.Number.Integer.Long
+  .p     { color: #ebeef2} // Symbols
 }
