--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,16 +54,16 @@
                 <div class="about-card drop-shadow">
                     <i class="fas fa-3x fa-toolbox"></i>
                     <h2 class="white-text">Dev Tools</h2>
-                    <p class="spaced-text">Pycharm Terminal</p>
-                    <p class="spaced-text">AdobeXD Postman</p>
-                    <p class="spaced-text">VSCode Tox Git</p>
+                    <p class="spaced-text">Pycharm Terminal Tox</p>
+                    <p class="spaced-text">AdobeXD Postman Git</p>
+                    <p class="spaced-text">VSCode</p>
                 </div>
                 <div class="about-card drop-shadow">
                     <i class="fas fa-3x fa-cogs"></i>
                     <h2 class="white-text">Frameworks</h2>
-                    <p class="spaced-text">Jekyll Bulma </p>
-                    <p class="spaced-text">VueJS Electron</p>
-                    <p class="spaced-text">Bootstrap React</p>
+                    <p class="spaced-text">VueJS Electron Bootstrap</p>
+                    <p class="spaced-text">Jekyll Bulma React</p>
+                    <p class="spaced-text">Bootstrap</p>
                 </div>
             </div>
         </div>
