--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -4,6 +4,8 @@ header {
   background-repeat: no-repeat;
   background-color: color(primary-color);
   color: color(text-color-light);
+  margin-left: -.1%;
+  margin-top: -.1%;
 
 
   .header-container {
