--- a/assets/main.css
+++ b/assets/main.css
@@ -193,7 +193,7 @@ a {
 }
 
 .section {
-  margin: 4rem 3rem 3rem 3rem;
+  margin: 4rem 2rem 3rem 2rem;
 }
 
 @media (min-width: 1160px) {
@@ -252,6 +252,8 @@ header {
   background-repeat: no-repeat;
   background-color: #1E2A39;
   color: #FFFFFF;
+  margin-left: -.1%;
+  margin-top: -.1%;
 }
 
 header .header-container {
